clusters/um890/hello-world/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world
  annotations:
    external-dns.alpha.kubernetes.io/target: "10.0.0.245"
spec:
  ingressClassName: haproxy
  rules:
  - host: hello.homelab.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-world
            port:
              number: 80
